// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard - LocationGroup should render correctly 1`] = `
Array [
  Array [
    <Link
      className="locationLink"
      id="location-link"
      key="0"
      link="/jobCard"
      title="Limit result to Pahang"
    />,
  ],
  ", ",
  <Link
    className="locationLink"
    id="location-link"
    key="1"
    link="/jobCard"
    title="Limit result to Selangor"
  />,
  " > ",
  <Link
    className="locationLink"
    id="location-link"
    key="11"
    link="/jobCard"
    title="Limit result to Cheras in Selangor"
  />,
  " > ",
  <span
    className="locationName"
    key="111"
  />,
]
`;

exports[`JobCard - LocationGroup should render with only last child location 1`] = `
Array [
  Array [
    <Link
      className="locationLink"
      id="location-link"
      key="0"
      link="/jobCard"
      title="Limit result to Pahang"
    />,
  ],
  ", ",
  <span
    className="locationName"
    key="111"
  />,
]
`;
